--- a/FEEAssignment/ClientApp/angular.json
+++ b/FEEAssignment/ClientApp/angular.json
@@ -20,11 +20,13 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/assets"],
+            "assets": [
+              "src/assets"
+            ],
             "styles": [
               "src/assets/styles/mwf-main.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",              
-              "src/assets/styles/toast.scss"              
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/styles/toast.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -76,16 +78,25 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": [],
-            "assets": ["src/assets"]
+            "assets": [
+              "src/assets"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "server": {
@@ -131,11 +142,16 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
     }
   },
-  "defaultProject": "FEEAssignment"
+  "defaultProject": "FEEAssignment",
+  "cli": {
+    "analytics": false
+  }
 }
